[package]
name = "pi_stash"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/GaiaWorld/pi_stash.git"
license = "MIT OR Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = '1.4'
dashmap = "6.1.0"
serde_json = "1.0.139"
